# mistral-ai

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AgentsApi.md  AgentsCompletionRequest.md  ApiEndpoint.md  ArchiveFtModelOut.md  Arguments.md  AssistantMessage.md  BaseModelCard.md  BatchApi.md  BatchError.md  BatchJobIn.md  BatchJobOut.md  BatchJobStatus.md  BatchJobsOut.md  ChatApi.md  ChatClassificationRequest.md  ChatCompletionChoice.md  ChatCompletionRequest.md  ChatCompletionRequestMessagesInner.md  ChatCompletionResponse.md  ChatCompletionResponseBase.md  ClassificationObject.md  ClassificationRequest.md  ClassificationResponse.md  ClassifiersApi.md  CompletionChunk.md  CompletionEvent.md  CompletionResponseStreamChoice.md  Content.md  Content1.md  ContentChunk.md  DeleteFileOut.md  DeleteModelOut.md  DeltaMessage.md  DeltaMessageContent.md  DetailedJobOut.md  EmbeddingRequest.md  EmbeddingResponse.md  EmbeddingResponseData.md  EmbeddingsApi.md  EventOut.md  (+63 more)
src/: models.rs
src/apis/: agents_api.rs  batch_api.rs  chat_api.rs  classifiers_api.rs  configuration.rs  embeddings_api.rs  files_api.rs  fim_api.rs  fine_tuning_api.rs  mod.rs  models_api.rs
src/models/: agents_completion_request.rs  api_endpoint.rs  archive_ft_model_out.rs  arguments.rs  assistant_message.rs  base_model_card.rs  batch_error.rs  batch_job_in.rs  batch_job_out.rs  batch_job_status.rs  batch_jobs_out.rs  chat_classification_request.rs  chat_completion_choice.rs  chat_completion_request.rs  chat_completion_request_messages_inner.rs  chat_completion_response.rs  content.rs  (+85 more)
